// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box default 1`] = `
<div
  className="sc-AxjAm gVFfZc"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  Default box
</div>
`;

exports[`Storyshots Box footer 1`] = `
<footer
  className="sc-AxjAm gVFfZc"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  Footer container
</footer>
`;

exports[`Storyshots Box header 1`] = `
<header
  className="sc-AxjAm gVFfZc"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  Header container
</header>
`;

exports[`Storyshots Box section 1`] = `
<section
  className="sc-AxjAm gVFfZc"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  Section container
</section>
`;

exports[`Storyshots Button button 1`] = `
<button
  className="sc-AxirZ eyOqve"
  color="--color-light"
  cursor="pointer"
  disabled={false}
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  overflow="visible"
  transform="none"
  type="button"
  width=""
>
  Button
</button>
`;

exports[`Storyshots Button disabled 1`] = `
<button
  className="sc-AxirZ eyOqve"
  color="--color-light"
  cursor="pointer"
  disabled={true}
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  overflow="visible"
  transform="none"
  type="submit"
  width=""
>
  Disabled
</button>
`;

exports[`Storyshots Button submit 1`] = `
<button
  className="sc-AxirZ eyOqve"
  color="--color-light"
  cursor="pointer"
  disabled={false}
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  overflow="visible"
  transform="none"
  type="submit"
  width=""
>
  Submit
</button>
`;

exports[`Storyshots Hr default 1`] = `
<hr
  className="sc-AxiKw eIyrbV"
  color=""
  cursor="–"
  display="block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
/>
`;

exports[`Storyshots Image default 1`] = `
<img
  alt=""
  className="sc-AxhCb gabAnK"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  src="https://uploads.quarkly.io/landing/quarkly-features-for-developers-hot-npm-import.png"
  title=""
  transform="none"
  width=""
/>
`;

exports[`Storyshots Image with alt & title 1`] = `
<img
  alt="Transfer necessary element props of your components to the panel"
  className="sc-AxhCb gabAnK"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  src="https://uploads.quarkly.io/landing/quarkly-features-for-developers-custom-props.png"
  title="Transfer necessary element props of your components to the panel"
  transform="none"
  width=""
/>
`;

exports[`Storyshots List ol default 1`] = `
<ol
  className="sc-AxhUy dbOMIn"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
  <li>
    Item 3
  </li>
  <li>
    Item 4
  </li>
</ol>
`;

exports[`Storyshots List ol latin 1`] = `
<ol
  className="sc-AxhUy gtGfob"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
  <li>
    Item 3
  </li>
  <li>
    Item 4
  </li>
</ol>
`;

exports[`Storyshots List ul circle 1`] = `
<ul
  className="sc-AxhUy ghnlpp"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
  <li>
    Item 3
  </li>
  <li>
    Item 4
  </li>
</ul>
`;

exports[`Storyshots List ul default 1`] = `
<ul
  className="sc-AxhUy dbOMIn"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
  <li>
    Item 3
  </li>
  <li>
    Item 4
  </li>
</ul>
`;

exports[`Storyshots Select default 1`] = `
<select
  className="sc-AxgMl dvCEsp"
  color=""
  cursor="–"
  display="inline-block"
  filter="none"
  height=""
  opacity="1"
  transform="none"
  width=""
>
  <option
    value="option1"
  >
    Option 1
  </option>
  <option
    value="option2"
  >
    Option 2
  </option>
  <option
    value="option3"
  >
    Option 3
  </option>
  <option
    value="option4"
  >
    Option 4
  </option>
</select>
`;
